--- a/src/App.css
+++ b/src/App.css
@@ -1,65 +1,27 @@
 * {
 	padding: 0;
 	margin: 0;
-	box-sizing: border-box;
+	box-sizing: content-box;
 }
 
 body {
-	font-family: "Segoe UI", Arial, sans-serif;
+	font-family: "Ubuntu", Arial, sans-serif;
 	line-height: 1.4;
 	color: #444;
 	background: #fff;
 	height: 100vh;
+	font-size: 600;
 }
 
-.container {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	max-width: 600px;
-	margin: 0 auto;
+a {
+	text-decoration: none;
+	color: #000;
 }
 
-.inner {
-	width: 100%;
-	padding: 8rem 10px 4rem;
+.ml-10 {
+	margin-left: 10px;
 }
 
-.form-container {
-	width: 100%;
-	margin-bottom: 20px;
-	display: flex;
-	border-radius: calc(0.5 * 100px);
-	box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.38);
-	justify-content: center;
-}
-
-.input-text {
-	font-size: 1rem;
-	font-weight: 400;
-	width: 85%;
-	padding-right: 5px;
-	padding-left: 10px;
-	border-radius: calc(0.5 * 100);
-}
-
-.input-text::placeholder {
-	color: rgba(0, 0, 0, 0.336);
-}
-
-.input-submit {
-	background: transparent;
-	color: #5b5b5b;
-	text-transform: capitalize;
-	cursor: pointer;
-	font-weight: 600;
+.mr-10 {
 	margin-right: 10px;
-}
-
-.input-text,
-.input-submit {
-	height: 45px;
-	outline: none;
-	border: none;
 }
