--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -41,6 +41,26 @@
 	display: flex;
 	align-items: center;
 }
+
+.navbar .navbar-container .navbar-header .navbar-header-menu {
+	margin-right: 3rem;
+	display: flex;
+	height: 100%;
+	align-items: center;
+}
+
+.navbar .navbar-container .navbar-header .navbar-header-menu-item {
+	list-style: none;
+	margin: 0 20px;
+	cursor: pointer;
+	color: #000;
+	height: 100%;
+	padding: auto;
+}
+
+.navbar .navbar-container .navbar-header .navbar-header-menu-item:hover {
+	border-bottom: 2px solid rgb(255, 94, 0);
+}
 /* Navbar end */
 
 /* Body start */
