--- a/src/pages/Flickity.css
+++ b/src/pages/Flickity.css
@@ -44,6 +44,7 @@ http://flickity.metafizzy.co
 	background: #fff;
 	background: hsla(0, 0%, 100%, 0.75);
 	cursor: pointer;
+	opacity: 0.5;
 	-webkit-transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
