--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -5,6 +5,15 @@
 	left: 0;
 	right: 0;
 	background: rgb(221, 221, 221);
+	top: 0;
+
+	height: 60px;
+	z-index: 1;
+	transition: all 0.1s ease-out;
+}
+
+.navbar.navbar-fixed {
+	height: 40px;
 }
 .navbar .navbar-container {
 	height: 60px;
@@ -17,18 +26,33 @@
 	justify-content: space-between;
 	align-items: center;
 	height: 100%;
+	transition: all 0.1s ease-out;
+}
+
+.navbar.navbar-fixed .navbar-container .navbar-header {
+	height: 40px;
 }
 
 .navbar .navbar-container .navbar-header .navbar-header-logo {
+	transition: all 0.1s ease-out;
 	font-size: 3rem;
 	cursor: pointer;
 }
+.navbar.navbar-fixed .navbar-container .navbar-header .navbar-header-logo {
+	font-size: 2.3rem;
+}
 
 .navbar .navbar-container .navbar-header .navbar-header-title {
+	transition: all 0.1s ease-out;
 	flex: 1;
 	margin-left: 1.5rem;
 	font-size: 2rem;
 	cursor: pointer;
+}
+
+.navbar.navbar-fixed .navbar-container .navbar-header .navbar-header-title {
+	margin-left: 1rem;
+	font-size: 1.2rem;
 }
 
 .navbar .navbar-container .navbar-header button {
@@ -42,24 +66,50 @@
 	align-items: center;
 }
 
+.navbar .navbar-container .navbar-header .navbar-login:hover a,
+.navbar .navbar-container .navbar-header .navbar-login:hover svg {
+	opacity: 0.75;
+}
+
 .navbar .navbar-container .navbar-header .navbar-header-menu {
 	margin-right: 3rem;
 	display: flex;
 	height: 100%;
-	align-items: center;
+}
+
+.navbar.navbar-fixed .navbar-container .navbar-header .navbar-header-menu-item {
+	padding: 10px 20px;
+	font-size: 1rem;
 }
 
 .navbar .navbar-container .navbar-header .navbar-header-menu-item {
+	transition: all 0.1s ease-out;
 	list-style: none;
-	margin: 0 20px;
+	padding: 18px 20px;
 	cursor: pointer;
 	color: #000;
-	height: 100%;
-	padding: auto;
+	position: relative;
+	font-size: 1.2rem;
+	text-transform: capitalize;
+	display: block;
+}
+
+.navbar .navbar-container .navbar-header .navbar-header-menu-item::after {
+	border-bottom: 3px solid rgb(255, 94, 0);
+	padding-bottom: 15px;
+	content: "";
+	display: block;
+	bottom: 0;
+	transform: scaleX(0);
+	transition: transform 0.25s ease-in-out;
 }
 
 .navbar .navbar-container .navbar-header .navbar-header-menu-item:hover {
-	border-bottom: 2px solid rgb(255, 94, 0);
+	color: rgb(255, 94, 0);
+}
+
+.navbar .navbar-container .navbar-header .navbar-header-menu-item:hover::after {
+	transform: scaleX(1.5);
 }
 /* Navbar end */
 
@@ -67,10 +117,20 @@
 .body-container {
 	position: relative;
 	top: 60px;
+	text-align: center;
 }
 
 .carousel {
 	height: 700px;
+}
+
+.body-slide {
+	width: 1400px;
+	margin: 0 auto;
+}
+
+.session-slide {
+	margin-top: 40px;
 }
 
 .slide-image {
@@ -82,7 +142,166 @@
 	width: 100%;
 	height: 100%;
 }
+.slide-image .slide-container {
+	position: relative;
+	height: 100%;
+}
+
+.slide-title {
+	position: absolute;
+	opacity: 0;
+	bottom: -35%;
+	transition: bottom 1s ease;
+	font-size: 2rem;
+	color: rgb(255, 255, 255);
+}
+
+.slide-image.is-selected .slide-title {
+	bottom: 50%;
+	left: 20%;
+	opacity: 1;
+}
+
+.slide-content {
+	pointer-events: none;
+	position: absolute;
+	opacity: 0;
+	bottom: -50%;
+	transition: bottom 1s ease;
+	font-size: 1.2rem;
+	color: rgb(255, 255, 255);
+	width: 600px;
+	text-align: left;
+
+	left: 20%;
+}
+
+.slide-image.is-selected .slide-content {
+	bottom: 35%;
+	opacity: 1;
+	transition-delay: 0.1s;
+	word-wrap: break-word;
+}
+
+.slide-button {
+	position: absolute;
+	opacity: 0;
+	bottom: -70%;
+	transition: bottom 1s ease;
+	padding: 15px 30px;
+	font-size: 1rem;
+	text-transform: uppercase;
+	border: 0;
+	border-radius: 2rem;
+	background-color: #fff;
+	cursor: pointer;
+	box-shadow: inset 0 1px 0 0 rgb(255 255 255 / 40%);
+}
+
+.slide-image.is-selected .slide-button {
+	bottom: 25%;
+	left: 20%;
+	opacity: 1;
+	transition-delay: 0.2s;
+}
+
+.inner-circle {
+	position: fixed;
+	height: 4rem;
+	width: 4rem;
+	border-radius: 50%;
+	right: 4rem;
+	bottom: 4rem;
+	border: 2px solid rgb(255, 180, 136);
+	opacity: 0;
+	transition: all 0.2s ease;
+	z-index: 99;
+}
+
+.inner-circle.show {
+	opacity: 1;
+}
+
+.button-to-top {
+	position: absolute;
+	border-radius: 50%;
+	border: 0;
+	outline: 0;
+	top: 0.5rem;
+	left: 0.5rem;
+	height: 3rem;
+	width: 3rem;
+	background-color: rgb(255, 94, 0);
+	transition: transform 0.2s ease-in-out;
+}
+
+.button-to-top:hover {
+	transform: scale(1.1);
+	animation: toggleButton 3s infinite;
+}
+
+@keyframes toggleButton {
+	0% {
+		transform: scale(1);
+	}
+	25% {
+		transform: scale(1.1);
+	}
+	50% {
+		transform: scale(1.2);
+	}
+	75% {
+		transform: scale(1.1);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
+
+.button-to-top:hover .inner-circle {
+	border: 5px solid rgb(255, 180, 136);
+}
+
+.button-to-top svg {
+	color: #fff;
+}
 /* Body end /*
+
+/* Footer start */
+.footer {
+	height: 400px;
+	width: 100%;
+	background-color: rgb(221, 221, 221);
+}
+
+.footer-menu {
+	display: flex;
+	padding: 3rem 10rem;
+}
+
+.footer-menu .footer-menu-items {
+	font-size: 1.5rem;
+	margin: 0 3.5rem;
+	list-style: none;
+}
+
+.footer-menu .footer-menu-items .footer-menu-child {
+}
+
+.footer-menu .footer-menu-items .footer-menu-child .footer-menu-child-item {
+	font-size: 1rem;
+	list-style: none;
+	margin: 10px 0;
+}
+
+.footer-menu
+	.footer-menu-items
+	.footer-menu-child
+	.footer-menu-child-item:hover {
+	color: rgb(255, 94, 0);
+	cursor: pointer;
+}
+/* Footer end */
 
 /* For icon start */
 .icon-menu-larger {
