--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,16 @@ a {
 	color: #000;
 }
 
+li {
+	list-style: none;
+	display: block;
+	transition-duration: 0.5s;
+}
+
+li:hover {
+	cursor: pointer;
+}
+
 .ml-10 {
 	margin-left: 10px;
 }
