--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 * {
 	padding: 0;
 	margin: 0;
-	box-sizing: content-box;
+	box-sizing: border-box;
 }
 
 body {
@@ -15,6 +15,10 @@ body {
 a {
 	text-decoration: none;
 	color: #000;
+}
+
+button:hover {
+	cursor: pointer;
 }
 
 li {
