--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -173,6 +173,7 @@ nav
 .body-container {
 	top: 60px;
 	text-align: center;
+	overflow: hidden;
 }
 
 .carousel {
@@ -278,7 +279,7 @@ nav
 	background: #f1f6fa;
 	transform: translateX(60rem);
 	opacity: 0;
-	transition: all 0.4s ease-in-out;
+	transition: all 0.8s ease-out;
 }
 
 .box-container.show .box-container-part-content {
@@ -326,7 +327,7 @@ nav
 	height: 95%;
 	transform: translateX(-45rem);
 	opacity: 0;
-	transition: all 0.4s ease-in-out;
+	transition: all 0.8s ease-out;
 }
 
 .box-container.show .box-container-img {
@@ -372,29 +373,35 @@ nav
 	height: 3rem;
 	width: 3rem;
 	background-color: rgb(255, 94, 0);
-	transition: transform 0.2s ease-in-out;
 }
 
-.button-to-top:hover {
+.button-to-top::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgb(255, 94, 0);
+	border-radius: 50%;
+	transition: transform 0.2s ease-in-out;
+	z-index: -999;
+	pointer-events: none;
+}
+
+.button-to-top:hover::after {
 	transform: scale(1.1);
-	animation: toggleButton 3s infinite;
+	animation: toggleButton 2s infinite;
 }
 
 @keyframes toggleButton {
-	0% {
+	from {
 		transform: scale(1);
+		opacity: 1;
 	}
-	25% {
-		transform: scale(1.1);
-	}
-	50% {
+	to {
 		transform: scale(1.2);
-	}
-	75% {
-		transform: scale(1.1);
-	}
-	100% {
-		transform: scale(1);
+		opacity: 0.5;
 	}
 }
 
